2005-04-29  Alex Roitman  <shura@gramps-project.org>
	* src/edit_person.glade: Compact name edit button.

2005-04-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/PHPGedViewConnector.py, src/plugins/phpgedview.glade:
	New files. Start of a client interface for phpGedView.
	unfinished. Put them in CVS to not loose them.

2005-04-28  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: remove dead logic for birth/death editing,
	fix list handling
	* src/EventEdit.py: fix callbacks for updating events
	* src/GrampsDbBase.py: shorten handles
	* src/Utils.py: shorten handles
	* src/edit_person.glade: fix image spacing
	
2005-04-27  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: rewrite of tabbed lists
	* src/EventEdit.py: bold the label
	* src/ListModel.py: allow column types to be specified
	* src/edit_person.glade: tab improvements

2005-04-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (__init__): Avoid TypeError in schema error
	message
	* src/StartupDialog.py (__init__): Catch Schema errors

2005-04-26  Alex Roitman  <shura@gramps-project.org>
	* NEWS, configure.in, src/EditPerson.py, src/EditSource.py,
	src/FamilyView.py, src/ImageSelect.py, src/Marriage.py,
	src/MergePeople.py, src/ReadGedcom.py, src/Report.py,
	src/ReportUtils.py, src/gedcomimport.glade, src/gramps.glade,
	src/gramps_main.py, src/rule.glade, src/plugins/ChangeNames.py,
	src/plugins/DetAncestralReport.py, src/plugins/DetDescendantReport.py,
	src/plugins/ExportVCalendar.py, src/plugins/TestcaseGenerator.py,
	src/plugins/changenames.glade, src/plugins/rel_ru.py, src/po/es.po,
	src/po/fr.po, src/po/ru.po, src/po/template.po: Merge changes
	made in gramps20 into HEAD.

2005-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Removed navigation buttons in flavour of a menu;

2005-04-23  Don Allingham  <don@gramps-project.org>
	* src/ListModel.py: keep track of data index